Vaca 0.0.8

- Added Scrolling example.
- Added Thread::sleep. 
- Added ScrollEvent and ScrollRequest. Modified onScroll to
  receive a ScrollEvent.

Vaca 0.0.7

- Added MenuPopup.
- Added RefWrapper class and Ref() method to support references in Bind().
- Added GraphicsPath.
- Added HttpRequest class.
- Added FontMetrics class.
- Added StatusBar widget. Now Frame has an associated StatusBar.
- Added Separator widget.
- Added RadioGroup::onChange event/signal.
- All methods that return Win32 handles (HWND, HDC, HBRUSH,
  HRGN, etc.) now are called getHandle().
- Added GdiObject and SmartPtr.
- Brush, Cursor, Font, Icon, Image, ImageList, Pen, and
  Region are SmartPtrs.
- Widget destructor deletes children.
- Renamed MouseButtons to MouseButton.
- Renamed Borders to Sides.
- Fixed Bix::getPreferredSize when EvenX or EvenY flags are activated.
- Now MenuItem::setEnabled/Checked can be used although the item isn't
  in a parent Menu.
- Removed SelfDestruction class (with SmartPtrs it isn't needed anymore).

Vaca 0.0.6

- Removed dependencies with Boost library.
  - Added Slot/Signal and Bind (placeholders aren't available, sorry).
  - Added ConditionVariable (from William E. Kempf code, Boost.Threads).
  - Added TimePoint.
- Added WidgetClassName.
- Renamed all headers files from .h to .hpp
- Added WidgetHitTestEnum.
- Changed all enumerations to Enum and EnumSet.
- Renamed CreateHWNDException to CreateWidgetException.
- Now String::getFile* methods use reverse_iterator.
- Fixed a bug in Register() where WidgetClassName weren't the same
  scope as "class_name".
- Fixed a bug in EditableListBox (when remove a node in a ListBox with
  vertical scroll).
- Removed all utilities (they were too big to include inside the
  main Vaca distribution).
- Finally Trees example works (Added removeNode to TreeNode and TreeView).
- Renamed acquireFocus to requestFocus.
- Renamed acquireCapture to captureMouse.
- Renamed releaseCapture to releaseMouse.
- Thanks to Emil Kirichev: